# cql-nom

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: ci.yml
src/: lib.rs  model.rs  parse.rs  utils.rs
src/model/: cql_type.rs  identifier.rs  order.rs  qualified_identifier.rs  statement.rs  table.rs  user_defined_type.rs
src/model/table/: column.rs  options.rs  primary_key.rs
src/parse/: cql_type.rs  identifier.rs  qualified_identifier.rs  statement.rs  table.rs  user_defined_type.rs
src/parse/table/: column.rs  options.rs  primary_key.rs
