[package]
name = "cql-nom"
version = "0.1.0"
edition = "2021"

[features]
docsrs = []

[dependencies]
nom = "7"
derive-where = "1"
getset = "0"
derive-new = "0"
derive_more = { version = "0", features = ["unwrap", "is_variant"] }

[package.metadata.docs.rs]
features = ["docsrs"]
all-features = true
